Quick fix for weird styles in FF
- the settings gear icon had a weird grey background in FF that was sticking out

--- a/src/search-injection/components/Results.css
+++ b/src/search-injection/components/Results.css
@@ -76,6 +76,7 @@
     background-image: url('/img/settings-icon.png');
     background-repeat: no-repeat;
     background-size: 20px;
+    background-color: #fff;
 }
 
 .resultsText {
